fix several findBugs warnings
git-svn-id: http://subversion.globaltester.org/repo/globaltester/org.globaltester.testrunner/trunk@301 cd90bb66-5c64-11e0-9e8e-9b0b1919da2d